--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <p>Click the button to trigger a function.</p>
 
-<button style="position: relative; background-color: white; " onclick="myFunction()">Click me</button>
-<button style="position: relative; background-color: white; " onclick="Cancellation()">Cancellation</button>
+<button style="position: relative; background-color: white; width: 100px; height: 100px; " onclick="myFunction()">Click me</button>
+<button style="position: relative; background-color: white; width: 100px; height: 100px; " onclick="Cancellation()">Cancellation</button>
 
 <p id="demo"></p>
 
